services/monitor/grafana/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: grafana
  healthCheck:
    active:
      type: TCP
      tcp: {}
      interval: 10s
      timeout: 2s
      unhealthyThreshold: 3
      healthyThreshold: 1
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 20
            unit: Second
