services/monitor/grafana/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/description: Dashboards y alertas del homelab
    gethomepage.dev/group: Monitorizacion
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/href: https://grafana.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - grafana.bonchan.org
  rules:
    - backendRefs:
        - name: grafana
          port: 80
